log
Wed 24 Apr 2024 06:28:04 PM UTC: 
 tests:  0|6
total_score: 0/70
d9747f7
Wed 24 Apr 2024 09:08:26 PM UTC: 
 hashmap.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
8e608eb
Wed 24 Apr 2024 09:37:35 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
eaa3cfb
Wed 24 Apr 2024 09:41:24 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
19dd25c
Wed 24 Apr 2024 09:46:42 PM UTC: 
 hashmap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:88:47: error: expected ‘)’ before ‘{’ token
   88 |       if(is_equal(map->buckets[posi]->key,key)
      |         ~                                     ^
      |                                               )
   89 |       {
      |       ~                                        
hashmap.c:93:5: error: expected expression before ‘}’ token
   93 |     }
      |     ^
Compilation failed
2c7cb70
Wed 24 Apr 2024 09:48:19 PM UTC: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  6|4
total_score: 30/70
9f010fb
Wed 24 Apr 2024 09:48:55 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
653c26f
Wed 24 Apr 2024 09:51:17 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
c41fea9
